2015-05-19  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqrdmulh_lane.c: New file.

2015-05-19  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqrdmulh.c: New file.

2015-05-19  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqmovun.c: New file.

2015-05-19  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqmovn.c: New file.

2015-05-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/66187
	* gcc.c-torture/execute/pr66187.c: New test.
	* gcc.dg/pr66187-1.c: New test.
	* gcc.dg/pr66187-2.c: New test.

2015-05-19  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.dg/vect/bb-slp-35.c: Adjust.

2015-05-19  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66165
	* gcc.dg/torture/pr66165.c: New testcase.

	PR tree-optimization/66185
	* gcc.dg/torture/pr66185.c: New testcase.

2015-05-19  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/54236
	* gcc.target/sh/pr54236-2.c: Adjust expected insn counts.

2015-05-19  Sameera Deshpande  <sameera.deshpande@imgtec.com>

	* gcc.target/mips/p5600-bonding.c : New file.

2015-05-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66106
	* gfortran.dg/interface_operator_1.f90: New tests.

2015-05-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66057
	* gfortran.dg/generic_29.f90: New tests.

2015-05-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66043
	* gfortran.dg/storage_size_6.f90: New tests.

2015-05-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66045
	* gfortran.dg/null1.f90: New test.

2015-05-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66044
	* gfortran.dg/entry_21.f90: New test.

2015-05-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66043
	* gfortran.dg/storage_size_6.f90: New tests.

2015-05-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66040
	* gfortran.dg/misplaced_statement.f90: New test.
